--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -47,3 +47,14 @@ body {
 .form-control {
   height: 50px;
 }
+
+.alert {
+  margin-bottom: 0px;
+  float: left;
+  width: 100%;
+}
+
+.btn-success {
+  padding: 15px;
+
+}
