--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,3 +6,18 @@
 .connect-develop {
   font-size: 20em;
 }
+
+.button-home {
+  width: 100%;
+}
+
+.home-right {
+  text-align: center;
+
+}
+
+.rails-index-select {
+  float: right;
+  margin-right: 5px;
+  margin-left: 5px;
+}
