--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Trips", minimum_spanning_trees_path %></li>
+        <li><%= link_to "Minimum Spanning Trees", minimum_spanning_trees_path %></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
