--- a/app/views/minimum_spanning_trees/_form.html.erb
+++ b/app/views/minimum_spanning_trees/_form.html.erb
@@ -26,7 +26,12 @@
     </div>
     <div class="location-list">
       <ul id="mst-input-list" class="list-group">
-
+        <% @minimum_spanning_tree.places.each do |place| %>
+            <li class="list-group-item location-address" role="alert">
+              <button type="button" class="close delete-place" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <div class="address-input"><%= place.name %></div>
+            </li>
+        <% end %>
       </ul>
     </div>
 
