--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,19 +6,23 @@
   <hr class="featurette-divider">
 
   <div class="row featurette">
-    <div class="col-md-7">
+    <div class="col-md-7 hme-left">
       <h2 class="featurette-heading">Use <span class="text-muted">Google Maps</span> to input places and calculate your <span class="text-muted">Minimum Spanning Tree</span></h2>
       <p class="lead">
         Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
         Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
       </p>
+      <%= link_to "Get Started", new_minimum_spanning_tree_path, class: "btn btn-success button-home" %>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-5 home-right">
       <i class="fa fa-connectdevelop fa-5x connect-develop"></i>
+    </div>
+    <div class="col-md-12">
+
     </div>
   </div>
 
-  <%= link_to "Get Started", new_minimum_spanning_tree_path, class: "btn btn-success" %>
+
 
   <hr class="featurette-divider">
 
