--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>GoogleMapsApp</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
-
+  <meta name="google-site-verification" content="yabnp0tcCH7VY37lqBreZQcXLK-GM02j9OsEGKTWa-k" />
 
   <%= csrf_meta_tags %>
 </head>
