--- a/app/views/minimum_spanning_trees/show.html.erb
+++ b/app/views/minimum_spanning_trees/show.html.erb
@@ -31,7 +31,7 @@
       <ul id="mst-input-list" class="list-group">
         <% @mst_edges.each do |edge| %>
             <li class="list-group-item">
-              <%= edge.node1.name %> > <%= edge.node2.name %>
+              <%= edge.name1 %> > <%= edge.name2 %>
 
             </li>
         <% end %>
@@ -45,7 +45,6 @@
 
   <hr class="featurette-divider">
 </div>
-
 
 <script>
   $mst_edges = <%= raw @mst_edges.to_json %>;
