graph builder class

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,9 @@
 <footer class="footer">
   <div class="container">
-    <p class="text-muted">by Andy LeRoy <a href="https://www.linkedin.com/in/andy-leroy-1b2a7323" target="_blank">linkedin</a></p>
+    <p class="text-muted">
+      Andy LeRoy /
+      <a href="https://www.linkedin.com/in/andy-leroy-1b2a7323" target="_blank"> linkedin / </a>
+      <a href="https://github.com/apleroy/minimum_spanning_tree_google_maps_api" target="_blank"> github</a>
+    </p>
   </div>
 </footer>
