--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,7 @@
       Andy LeRoy /
       <a href="https://www.linkedin.com/in/andy-leroy-1b2a7323" target="_blank"> linkedin</a> /
       <a href="https://github.com/apleroy/minimum_spanning_tree_google_maps_api" target="_blank"> github</a>
+      <a href="http://apleroy.com" target="_blank"> apleroy.com</a>
     </p>
   </div>
 </footer>
