--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
         This application showcases an example of creating and editing minimum spanning trees in a visual manner by using the Google Maps API.
         Use this application to enter map based locations.  Locations will become nodes in the minimum spanning tree, and the shortest routes between the locations will be used
         in calculating the edges and the overall minimum spanning tree, which is plotted visually.
-        Visit <a href="http://apleroy.com" target="_blank"> apleroy.com</a> for a full overview and tutorial for this application
+        Please visit <a href="http://apleroy.com" target="_blank"> apleroy.com</a> for a full overview and tutorial for this application.
       </p>
       <%= link_to "Get Started", new_minimum_spanning_tree_path, class: "btn btn-success button-home" %>
     </div>
